src/styles/game.scss
@use 'game/layer-text';
@use 'game/layer-menu';
@use 'game/layer-save-config';
@use 'game/layer-history';
@use 'game/layer-skip';
@use 'game/layer-choices';

:root {
	--transition-time: 0.2s;
	--transition: all var(--transition-time) ease-out;
	--text-bg: linear-gradient(90deg,
		rgb(0 0 0 / 0.1) 0%,
		rgb(0 0 0 / 0.3) 4%,
		rgb(0 0 0 / 0.42) 8%,
		rgb(0 0 0 / 0.42) 92%,
		rgb(0 0 0 / 0.3) 96%,
		rgb(0 0 0 / 0.1) 100%);
	--menu-button-bg: rgb(14 79 187);
	--gradient-layer: linear-gradient(180deg, #001325, rgb(0 61 127 / 90%));
	--transparent-layer: #001532bf;
	--history-separator: linear-gradient(90deg, #1b9ab900 0%, #1fb8ff 50%, #1b9ab900 100%);
	--textbox-adv-bg: linear-gradient(360deg, #010d1fd1, #005a91fa 94%, #043252);
}

.window {
	color: var(--text-color);
	display: flex;
	background-color: #000;
	isolation: isolate;
	
	.layer {
		width: 100%;
		height: 100%;
		position: absolute;
		inset: 0;
	}
	#layer-graphics {
		z-index: 0;
		overflow: hidden;

		.blur {
			filter: blur(80px) brightness(0.4);
		}
	}
	#layer-text {
		@extend %layer-text;
	}
	#layer-choices {
		@extend %layer-choices;
	}
	#layer-menu {
		@extend %layer-menu;
	}
	#layer-save, #layer-config {
		@extend %layer-save-config;
	}
	#layer-history {
		@extend %layer-history;
	}
	#skip-layer {
		@extend %layer-skip;
	}

	.menu-button {
		display: none;
	}
	// mobile screens
	@media not all and (hover: hover) and (pointer: fine) {
		.menu-button {
			display: flex;
			position: absolute;
			bottom: min(3em, 10vh);
			right: 0;
			z-index: 3;
			background-color: var(--menu-button-bg);
			padding: 16px 4px;
			border-radius: 8px 0 0 8px;
			opacity: .5;
			transition: var(--transition);

			&:hover {
				opacity: 1;
			}
		}
	}
}

